front-end fixed: auth center aligned

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,7 +8,7 @@ html{overflow:scroll;}
 html, body, div, a, form, table, caption, thead, tbody, tr, th, td, submit {
     margin:0; outline:0; border:0; padding:0; font-size:100%; vertical-align:baseline; background:transparent;
 }
-body { font-size:0.875em; line-height:1.5; color:#666; -webkit-text-size-adjust:none; min-width:320px; }
+body { font-size:0.875em; line-height:1.5; color:#666; -webkit-text-size-adjust:none; min-width:320px; height: 100vh;}
 h1, h2 {display: inline-block; font-size: 3em;}
 h3 {font-size: 1em; padding-left: 10px; padding-top: 10px;}
 p{margin:0; padding:0;}
@@ -21,8 +21,9 @@ caption {display:none; width:0; height:0; margin-top:-1px; overflow:hidden; visi
 .navbar {padding-top: 1rem; padding-bottom: 1rem; font-size: 150%}
 .navbar-brand {font-size: 130% !important;}
 
+.auth-buttons {text-align:center;}
 
-.container {max-width:1024px; margin:0 auto; width:1440px}
+.container {max-width:1024px; margin:0 auto; width:1440px; height: 100%;}
 .commentList {padding: 30px 10px 0px 10px;}
 .comment-group { margin-top: 50px; }
 .board_list {font-size: 20px; width:100%; border-top:2px solid #252525; border-bottom:1px solid #ccc; margin:15px 0; border-collapse: collapse;}
